<resources>
    <string name="app_name">奶思Way</string>
    <string name="ok">确定</string>
    <string name="settings">设置</string>
    <string name="like">喜欢</string>
    <string name="star">收藏</string>
    <string name="bullet_screen">弹幕</string>
    <string name="main_page">首页</string>
    <string name="discovery">广场</string>
    <string name="search">搜索</string>
    <string name="me">我的</string>
    <string name="colon">:</string>
    <string name="focus">关注</string>
    <string name="recommend">推荐</string>
    <string name="trends">动态</string>
    <string name="default_user_name">本间芽衣子</string>
    <string name="home_page">主页</string>
    <string name="posts">动态</string>
    <string name="gallery">相册</string>
    <string name="hot_search">热搜榜</string>
    <string name="friends_search">好友搜</string>
    <string name="near_search">附近搜</string>
    <string name="selection_search">精选搜</string>
    <string name="search_hint">实时热点，每分钟更新一次</string>
</resources>
