<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/status_bar_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/search_box_background"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:padding="4dp"
            android:src="@drawable/baseline_search_white_48"
            android:tint="#969696"/>


        <EditText
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#00000000"
            android:textColor="@android:color/primary_text_light"
            android:textSize="14sp"/>

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:padding="4dp"
            android:src="@drawable/baseline_keyboard_voice_white_48"
            android:tint="#969696"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="#ffffff"
        android:elevation="2dp"
        android:gravity="center"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/hot_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/hot_search"
                android:textColor="#333333"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <View
                android:layout_width="30dp"
                android:layout_height="3dp"
                android:layout_below="@+id/hot_search"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:background="@drawable/underline"/>

        </RelativeLayout>


        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/near_search"
            android:textColor="#9e9e9e"
            android:textSize="15sp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/friends_search"
            android:textColor="#9e9e9e"
            android:textSize="15sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:background="#eeeeee"
        android:gravity="center_vertical"
        android:paddingLeft="16dp"
        android:text="@string/search_hint"
        android:textColor="#828282"
        android:textSize="12sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/hot_searches"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>