<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingTop="@dimen/status_bar_size">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@android:color/white"
        android:elevation="1dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="8dp"
            android:src="@drawable/add_friends"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/focus"
                android:textColor="#474747"
                android:textSize="15sp"/>

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp">

                <TextView
                    android:id="@+id/recommend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/recommend"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/recommend"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/underline"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/trends"
                android:textColor="#474747"
                android:textSize="15sp"/>

        </LinearLayout>

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="12dp"
            android:src="@drawable/edit"/>


    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>