<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="256dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center_horizontal"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="256dp"
                app:layout_collapseMode="parallax">

                <View
                    android:id="@+id/placeholder"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/status_bar_size"/>

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:foreground="#55000000"
                    android:scaleType="fitXY"
                    android:src="@drawable/default_profile_picture"/>

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_below="@+id/placeholder"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/default_avatar"
                    app:riv_border_color="#ffffff"
                    app:riv_border_width="2dp"
                    app:riv_corner_radius="40dp"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_user_name"
                    android:textColor="#ffffff"
                    android:textSize="15sp"/>

                <LinearLayout
                    android:id="@+id/follow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:divider="@drawable/profile_divider"
                    android:dividerPadding="8dp"
                    android:orientation="horizontal"
                    android:showDividers="middle">

                    <TextView
                        android:id="@+id/followings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp"
                        android:gravity="center"
                        android:text="1\n关注"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp"
                        android:gravity="center"
                        android:text="3\n粉丝"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="28dp"
                        android:layout_marginStart="28dp"
                        android:gravity="center"
                        android:text="9\n收藏"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"/>


                </LinearLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/follow"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:text="个人简介：我们仍未知道那天所看见的花的名字"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>


            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextColor="#ffffff"/>


            <ImageView
                android:id="@+id/settings"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start|top"
                android:layout_marginTop="@dimen/status_bar_size"
                android:padding="8dp"
                android:src="@drawable/baseline_settings_white_48"
                app:layout_collapseMode="pin"/>

            <ImageView
                android:id="@+id/share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|top"
                android:layout_marginTop="@dimen/status_bar_size"
                android:padding="8dp"
                android:src="@drawable/baseline_share_white_48"
                app:layout_collapseMode="pin"/>

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#f9f9f9"
            android:elevation="2dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="36dp"
                android:gravity="center"
                android:text="@string/home_page"
                android:textColor="#9e9e9e"
                android:textSize="15sp"/>

            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="36dp">

                <TextView
                    android:id="@+id/my_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/posts"
                    android:textColor="#333333"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_below="@+id/my_posts"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/underline"/>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/gallery"
                android:textColor="#9e9e9e"
                android:textSize="15sp"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/posts"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>